# warpo

./: .clang-tidy  .git-blame-ignore-revs  .gitignore  .prettierignore  .prettierrc.yml  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  README.md  as-test.config.js  asconfig.json  asconfig.schema.json  cspell.json  package-lock.json  package.json  tsconfig-warpo.json
common/: AsModule.cpp  CMakeLists.txt  ClassInfo.cpp  ConfigFile.cpp  ConfigFile.hpp  ConfigProvider.cpp  DebugLevel.cpp  Features.cpp  OptLevel.cpp  SubProgramInfo.cpp  TypeNameHelper.cpp  VariableInfo.cpp
driver/: BuildScript.cpp  BuildScript.hpp  CMakeLists.txt  Driver.cpp  LinkedAPI.cpp  LinkedAPI.hpp
frontend/: AsString.cpp  AsString.hpp  CMakeLists.txt  Compiler.cpp  CompilerImpl.cpp  CompilerImpl.hpp  LinkedAPI.cpp  LinkedAPI.hpp  LinkedAPIAssemblyscript.cpp  LinkedAPIBinaryen.cpp  LinkedAPICppWrapper.cpp  LinkedAPIOpt.cpp  LinkedAPIVariableInfo.cpp  ModuleResolver.cpp  ModuleResolver.hpp  UTF16.cpp  UTF16.hpp
frontend/ASC/: ASC.cpp  ASC.hpp  CMakeLists.txt  diag.mjs  gen.mjs  helper.mjs  std.mjs
passes/: AdvancedInlining.cpp  AdvancedInlining.hpp  BinaryWriter.cpp  BinaryWriter.hpp  CMakeLists.txt  CombineSwitchTargets.cpp  CombineSwitchTargets.hpp  ConditionalReturn.cpp  ConditionalReturn.hpp  DoInlining.cpp  DoInlining.hpp  ExtractMostFrequentlyUsedGlobals.cpp  ExtractMostFrequentlyUsedGlobals.hpp  ImmutableLoadEliminating.cpp  ImmutableLoadEliminating.hpp  InlinedDecoratorLower.cpp  InlinedDecoratorLower.hpp  InsertTracePoint.cpp  InsertTracePoint.hpp  InstrSimplifier.cpp  InstrSimplifier.hpp  Runner.cpp  Runner.hpp  RunnerForTest.cpp
passes/DwarfGenerator/: AbbrevFactory.cpp  AbbrevFactory.hpp  DebugStringManager.cpp  DebugStringManager.hpp  DwarfGenerator.cpp  IntervalTree.hpp  IntervalTreeTest.cpp
passes/GC/: BaseLower.cpp  BaseLower.hpp  CollectLeafFunction.cpp  CollectLeafFunction.hpp  FastLower.cpp  FastLower.hpp  GCInfo.hpp  ImmutableGlobalToStackRemover.cpp  ImmutableGlobalToStackRemover.hpp  LeafFunctionFilter.cpp  LeafFunctionFilter.hpp  Liveness.cpp  Liveness.hpp  Lowering.cpp  MergeSSA.cpp  MergeSSA.hpp  ObjLivenessAnalyzer.cpp  ObjLivenessAnalyzer.hpp  OptLower.cpp  OptLower.hpp  PrologEpilogInserter.cpp  PrologEpilogInserter.hpp  SSAObj.cpp  SSAObj.hpp  ShrinkWrap.cpp  ShrinkWrap.hpp  StackAssigner.cpp  StackAssigner.hpp  ToStackLower.cpp  ToStackReplacer.cpp  ToStackReplacer.hpp
passes/helper/: BinaryenExt.cpp  BinaryenExt.hpp  BuildCallGraph.cpp  BuildCallGraph.hpp  CFG.cpp  CFG.hpp  CostModel.cpp  CostModel.hpp  DomTree.cpp  DomTree.hpp  DomTreeImpl.cpp  DomTreeImpl.hpp  ExprInserter.cpp  ExprInserter.hpp  FindExpr.hpp  InstructionPerformanceCostModel.inc  InstructionSizeCostModel.inc  Matcher.hpp  Powerset.cpp  Powerset.hpp  ToString.cpp  ToString.hpp
passes/instrumentation/: BasicBlockAnalysis.cpp  BasicBlockAnalysis.hpp  BasicBlockWalker.cpp  BasicBlockWalker.hpp  CovInstrumentationWalker.cpp  CovInstrumentationWalker.hpp  CoverageInstru.cpp  CoverageInstru.hpp  CoverageInstrumentation.cpp  CoverageInstrumentation.hpp  InstrumentResponse.hpp  MockInstrumentationWalker.cpp  MockInstrumentationWalker.hpp  Name.hpp
passes/unittests/: Helper.cpp  Helper.hpp
support/: CMakeLists.txt  Color.cpp  Debug.cpp  DynBitSet.cpp  FileSystem.cpp  Opt.cpp  Statistics.cpp  StringOperator.cpp
tests/dwarf/: CMakeLists.txt  TestDebugSymbol.cpp
tests/dwarf/cases/: TestBaseTypeToString.ts  TestBaseTypeToStringFixture.txt  TestClassMemberBasic.ts  TestClassMemberBasicFixture.txt  TestFunctionAsFieldFixture.txt  TestFunctionParameterFixture.txt  TestGlobal.ts  TestGlobalFixture.txt  TestIssue328CrashFixture.txt  TestLambdaFixture.txt  TestLocalInBlockFixture.txt  TestLocalInFor.ts  TestLocalInForFixture.txt  TestLocalInForOfFixture.txt  TestLocalInIfFixture.txt  TestLocalInSwitch.ts  TestLocalInSwitchFixture.txt  TestLocalInWhile.ts  TestLocalInWhileFixture.txt  TestTemplateClass.ts  TestTemplateClassFixture.txt  TestTuple.ts  TestTupleFixture.txt  tsconfig.json
tests/frontend/: CMakeLists.txt  FrontendTest.cpp  tsconfig.json
tests/frontend/compiler/: ReturnType.wat  abi.opt.wat  abi.ts  abi.wat  asc-constants.ts  asc-constants.wat  assert-nonnull.opt.wat  assert-nonnull.wat  assert.wat  assignment-chain.opt.wat  assignment-chain.ts  assignment-chain.wat  avoid-resolve-loop.ts  bigint-integration.opt.wat  bigint-integration.wat  binary-error.ts  binary.opt.wat  binary.wat  bool-Oz.json  bool-Oz.ts  bool-Oz.wat  bool.opt.wat  bool.ts  bool.wat  builtins.opt.wat  builtins.ts  builtins.wat  call-inferred.opt.wat  call-inferred.wat  call-optional.opt.wat  call-optional.wat  call-rest-err.json  call-rest.opt.wat  call-rest.ts  call-rest.wat  call-super.opt.wat  call-super.ts  call-super.wat  cast.wat  class-abstract-errors.ts  (+326 more)
tests/frontend/compiler/extension/: utf8_const_str.opt.wat  utf8_const_str.ts  utf8_const_str.wat
tests/frontend/compiler/features/: gc.json  not-supported.json
tests/frontend/compiler/host/: wasi_preview1.json  wasi_preview1.opt.wat  wasi_preview1.ts  wasi_preview1.wat
tests/frontend/compiler/incremental-gc/: call-indirect.opt.wat  call-indirect.wat
tests/frontend/compiler/issues/: 1095.opt.wat  1095.wat  1225.opt.wat  1225.wat  1699.opt.wat  1699.wat  1714.opt.wat  1714.ts  1714.wat  1751.ts  2085.ts  2166.opt.wat  2166.wat  2202.ts  2473.ts  2622.opt.wat  2622.wat  2707.opt.wat  2707.wat  2737.json  2737.ts  2825.opt.wat  2825.wat  2873.opt.wat  2873.wat
tests/frontend/compiler/rt/: alloc-large-memory.opt.wat  alloc-large-memory.wat  finalize.opt.wat  finalize.wat  flags.opt.wat  flags.ts  flags.wat  ids.wat  issue-2719.opt.wat  issue-2719.ts  issue-2719.wat  runtime-incremental-export.json  runtime-incremental-export.opt.wat  (+10 more)
tools/asc/: AscMain.cpp  CMakeLists.txt
tools/compiler/: CMakeLists.txt  CompilerMain.cpp
tools/optimizer/: CMakeLists.txt  OptMain.cpp  OptimizerMain.cpp
tools/trace_visualizer/: CMakeLists.txt  Main.cpp  Perfetto.hpp
warp_runner/: CMakeLists.txt  LinkedAPIAssemblyscript.cpp  UTF16.cpp  UTF16.hpp  WarpRunner.cpp
(+500 files in other folders)
